# Pull-Request-Review-agent-

./: .gitignore  .gitlab-ci.yml  CODEMATE_DEPLOYMENT.md  FEATURES.md  GUI_README.md  LICENSE  README.md  WEB_README.md  analyze_file.py  app.py  create_submission.py  create_submission_simple.py  demo.py  deploy.py  env.example  interactive_review.py  launch_enhanced_gui.bat  launch_gui.bat  launch_web.bat  pr_review_gui.py  pr_review_gui_enhanced.py  pyproject.toml  requirements.txt  setup.py  simple_pr_review.py  test_code.py
.github/workflows/: pr-review.yml
docs/: API.md  CONFIGURATION.md
examples/: basic_usage.py  ci_integration.py  custom_analyzer.py
pr_review_agent/: __init__.py  cli.py
pr_review_agent/analyzers/: __init__.py  ai_analyzer.py  bandit_analyzer.py  base.py  black_analyzer.py  flake8_analyzer.py  mypy_analyzer.py  pylint_analyzer.py  safety_analyzer.py
pr_review_agent/core/: __init__.py  agent.py  models.py
pr_review_agent/providers/: __init__.py  base.py  bitbucket.py  github.py  gitlab.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: __init__.py  test_agent.py
